--- a/QLDSV/QLDSV.csproj
+++ b/QLDSV/QLDSV.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataHelper.cs" />
+    <Compile Include="fe\DSLTC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="fe\DSLTC.Designer.cs">
+      <DependentUpon>DSLTC.cs</DependentUpon>
+    </Compile>
     <Compile Include="fe\DSMH.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -65,6 +72,12 @@
     <Compile Include="fe\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="fe\ND.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="fe\ND.Designer.cs">
+      <DependentUpon>ND.cs</DependentUpon>
+    </Compile>
     <Compile Include="fe\SinhVien.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +92,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="fe\DSLTC.resx">
+      <DependentUpon>DSLTC.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="fe\DSMH.resx">
       <DependentUpon>DSMH.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fe\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fe\ND.resx">
+      <DependentUpon>ND.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fe\SinhVien.resx">
       <DependentUpon>SinhVien.cs</DependentUpon>
